please feel free to comment!

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Please feel free to comment on this so i can learn! Thank you!!!*/
 #navbar{
     background-color: gray;
     border:0.8px solid salmon;
