--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,21 @@ ul {
     padding: 0;
 }
 
+.thankyou {
+    background-color: var(--color3);
+    display: flex;
+    flex-direction: column;
+    padding-top: 5%;
+    padding-bottom: 70%;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+body {
+    background-color: var(--color3);
+}
+
 h1 {
     color: var(--color1);
     font-size: 20px;
@@ -148,13 +163,6 @@ h1 {
     transition: transform 0.3s ease-out;
 }
 
-h1:hover {
-    transform: translateY(-20px);
-}
-
-/* h1 must translate up */
-
-/* description must shutter down */
 .description {
     display: flex;
     justify-content: center;
@@ -295,7 +303,30 @@ a.contact-details:hover {
     /** fix this **/
 }
 
-input[type="submit"] {
+.submitform {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#namefield {
+    width: 450px;
+    border-radius: 5px;
+}
+
+#emailfield {
+    width: 450px;
+    border-radius: 5px;
+}
+
+#textfield {
+    width: 450px;
+    height: 250px;
+    border-radius: 5px;
+}
+
+button[type="submit"] {
     display: block;
     width: 40%;
     margin: 1em auto;
@@ -309,7 +340,7 @@ input[type="submit"] {
     color: var(--color4);
 }
 
-input[type="submit"]:hover {
+button[type="submit"]:hover {
     display: block;
     width: 40%;
     margin: 1em auto;
